@@ -1,5 +1,5 @@
-SomaFM XBMC Plugin
-==================
+Intergalactic FM Kodi Plugin
+============================
 
 Installation
 ------------
@@ -11,26 +11,26 @@ the [Kodi Wiki article on `userdata`](http://kodi.org/?title=Userdata) to find i
 ### Git
 
  1. Change into your `addons` folder
- 2. Clone the repository into a new folder `plugin.audio.somafm`
+ 2. Clone the repository into a new folder `plugin.audio.intergalacticfm`
  3. Done
 
 On Linux and possibly Mac OSX
 
     cd ~/kodi/addons/
-    git clone https://github.com/Oderik/xbmc-somafm.git plugin.audio.somafm
+    git clone https://github.com/Oderik/kodi-intergalacticfm.git plugin.audio.intergalacticfm
 
 ### ZIP
 
 Unfortunately, installing from a ZIP-file is not a lot easier
 
- 1. [Download the ZIP Archive from GitHub](https://github.com/Oderik/xbmc-somafm/archive/master.zip)
+ 1. [Download the ZIP Archive from GitHub](https://github.com/Oderik/kodi-intergalacticfm/archive/master.zip)
  2. Extract the contents
- 3. Rename the resulting folder `xbmc-somafm-master` to `plugin.audio.somafm`
+ 3. Rename the resulting folder `kodi-intergalacticfm-master` to `plugin.audio.intergalacticfm`
  4. Move the folder to your `addons` folder
 
 Again on Linux and possibly Mac OSX
 
-    wget --content-disposition https://github.com/Oderik/xbmc-somafm/archive/master.zip
-    unzip xbmc-somafm-master.zip 
-    mv xbmc-somafm-master/ plugin.audio.somafm
-    mv plugin.audio.somafm/ ~/kodi/addons/
+    wget --content-disposition https://github.com/Oderik/kodi-intergalacticfm/archive/master.zip
+    unzip kodi-intergalacticfm-master.zip 
+    mv kodi-intergalacticfm-master/ plugin.audio.intergalacticfm
+    mv plugin.audio.intergalacticfm/ ~/kodi/addons/
