@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.somafm"
-       name="SomaFM"
+<addon id="plugin.audio.intergalacticfm"
+       name="Intergalactic FM"
        version="1.0.1"
        provider-name="Oderik">
     <requires>
-        <import addon="xbmc.python" version="2.1.0"/>
+        <import addon="kodi.python" version="2.1.0"/>
         <import addon="script.module.beautifulsoup" version="3.0.8"/>
     </requires>
-    <extension point="xbmc.python.pluginsource" library="default.py">
+    <extension point="kodi.python.pluginsource" library="default.py">
         <provides>audio</provides>
     </extension>
-    <extension point="xbmc.addon.metadata">
+    <extension point="kodi.addon.metadata">
         <platform>all</platform>
         <summary lang="en">Listener supported radio</summary>
         <summary lang="de">Hörergetragenes Radio</summary>
         <summary lang="nl">Luisteraarondersteunde Radio</summary>
         <description lang="en"><![CDATA[
-Over 20 unique channels of listener-supported, commercial-free, underground/alternative radio broadcasting from San Francisco. All music hand-picked by SomaFM's award-winning DJs and music directors.
+Five channels of listener-supported, commercial-free, underground/alternative radio broadcasting from Intergalacic FM.
 
-Please consider donating at https://somafm.com to keep this service alive!
+Please consider donating at https://intergalacticfm.com to keep this service alive! Music Pro Galaxy.
         ]]></description>
         <description lang="de"><![CDATA[
-Über 20 einzigartige Sender vom hörergetragenen, werbefreien, underground / alternative Radio aus San Francisco. Die gesamte Musik ist handerlesen von SomaFMs ausgezeichneten DJs und Musikprogrammleitern.
+Fünf einzigartige Sender vom hörergetragenen, werbefreien, underground / alternative Radio von Intergalactic FM.
 
-Bitte denk über eine Spende auf https://somafm.com nach, um diesen Dienst am Leben zu halten!
+Bitte denk über eine Spende auf https://intergalacticfm.com nach, um diesen Dienst am Leben zu halten! Music Pro Galaxy.
         ]]></description>
         <description lang="nl"><![CDATA[
-OVer 20 unieke kanalen van luisteraarondersteunde, reclamevrije, alternatieve radiouitzendingen uit San Fransisco. Alle muziek is handgeselecteerd door SomaFM's bekroonde dj's en muzikale programmamakers.
+Vijf unieke kanalen van luisteraarondersteunde, reclamevrije, alternatieve radiouitzendingen van Intergalactic FM.
 
-Overweeg a.u.b. een donatie te doen op https://somafm.com om deze service in leven te houden!
+Overweeg a.u.b. een donatie te doen op https://intergalacticfm.com om deze service in leven te houden! Music Pro Galaxy.
         ]]></description>
-        <website>https://somafm.com</website>
-        <source>https://github.com/Oderik/xbmc-somafm</source>
+        <website>https://intergalacticfm.com</website>
+        <source>https://github.com/PanderMusubi/kodi-intergalacticfm</source>
     </extension>
 </addon>
